--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,19 @@
-<h1>Contact Me</h1>
-<p>Tel: +2348084588443</p>
-<p>Email: solomonnnewmann@gmail.com</p>
-<p>Address:</p>
-<p>
-  10 Omole Street<br />
-  Ikorodu<br />
-  Nigeria <br />
-</p>
+<!DOCTYPE html>
+<html lang="en" style="background: rgb(247, 247, 225);">
+<head>
+    <meta charset="UTF-8">
+</head>
+<body>
+    <a href="../index.html">HOME</a>
+    <h1>CONTACT</h1>
+    <h2>Email</h2>
+    <p>solomonnnewmann@gmail.com</p>
+    <h2>Mobile number</h2>
+    <p>+2348084588443</p>
+    <h2>Location</h2>
+    <p>Lagos</p>
+</body>
+<footer>
+    <p>&copy Solomon Otokun. All rights reserved</p>
+</footer>
+</html>
